@@ -1,3 +1,7 @@
+Wed Mar  4 00:29:18 2015  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* tool/redmine-backporter.rb: now can specify shorten form of commands.
+
 Tue Mar  3 23:41:42 2015  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* tool/redmine-backporter.rb (Readline.readline): drop untreated control
